[DPEDE-5698] Fix card accordion double border (#2105)
* [DPEDE-5698] Fix card accordion double border

* [DPEDE-5698] styles refactor & app-layout fix

* [DPEDE-5698] Alert border bottom restored

* [DPEDE-5698] Border to none

--- a/src/chi/components/card/card.scss
+++ b/src/chi/components/card/card.scss
@@ -488,6 +488,7 @@
       > chi-accordion .chi-accordion__item,
       > .chi-accordion .chi-accordion__item {
         background-color: transparent;
+        border: none;
 
         .chi-accordion__trigger {
           background-color: transparent;
@@ -560,6 +561,7 @@
     > .chi-accordion {
       .chi-accordion__item {
         background-color: transparent;
+        border: none;
 
         .chi-accordion__trigger {
           background-color: transparent;
